--- a/bbruntime_dll/CMakeLists.txt
+++ b/bbruntime_dll/CMakeLists.txt
@@ -87,4 +87,16 @@ target_link_libraries(runtime
                  odbccp32.lib
 )
 
+function(copy_dll_to_install target dst)
+	set(SRC $<TARGET_FILE_DIR:${target}>/${target}.dll)
+	set(DST ${CMAKE_SOURCE_DIR}/_release/${dst}.dll)
+	add_custom_command(TARGET ${target} POST_BUILD VERBATIM
+			COMMAND ${CMAKE_COMMAND} -E echo "Copying ${target} output file \"${SRC}\" to \"${DST}\""
+			COMMAND ${CMAKE_COMMAND} -E copy ${SRC} ${DST})
+endfunction()
+
+copy_dll_to_install(runtime bin/runtime)
+
+
+
 
