--- a/blitzide/CMakeLists.txt
+++ b/blitzide/CMakeLists.txt
@@ -33,4 +33,14 @@ target_compile_options(ide PRIVATE /Gz)
 
 set_target_properties(ide PROPERTIES LINK_FLAGS "/ENTRY:WinMainCRTStartup")
 
+function(copy_exe_to_install target dst)
+	set(SRC $<TARGET_FILE_DIR:${target}>/${target}.exe)
+	set(DST ${CMAKE_SOURCE_DIR}/_release/${dst}.exe)
+	add_custom_command(TARGET ${target} POST_BUILD VERBATIM
+			COMMAND ${CMAKE_COMMAND} -E echo "Copying ${target} output file \"${SRC}\" to \"${DST}\""
+			COMMAND ${CMAKE_COMMAND} -E copy ${SRC} ${DST})
+endfunction()
+
+copy_exe_to_install(ide bin/ide)
+
 
