--- a/linker_dll/CMakeLists.txt
+++ b/linker_dll/CMakeLists.txt
@@ -22,6 +22,17 @@ add_library(linker SHARED
 
 target_compile_options(linker PRIVATE /Gz)
 
+function(copy_dll_to_install target dst)
+	set(SRC $<TARGET_FILE_DIR:${target}>/${target}.dll)
+	set(DST ${CMAKE_SOURCE_DIR}/_release/${dst}.dll)
+	add_custom_command(TARGET ${target} POST_BUILD VERBATIM
+			COMMAND ${CMAKE_COMMAND} -E echo "Copying ${target} output file \"${SRC}\" to \"${DST}\""
+			COMMAND ${CMAKE_COMMAND} -E copy ${SRC} ${DST})
+endfunction()
+
+copy_dll_to_install(linker bin/linker)
+
+
 
 
 
